testing vercel.json config

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-  "rewrites": [
+  "redirects": [
     {
       "source": "apple-app-site-association",
-      "destination": "public/.well-known/apple-app-site-association",
+      "destination": ".well-known/apple-app-site-association",
       "has": [
         { "type": "header", "key": "Content-Type", "value": "application/json" }
       ]
