Added server function to handle appleSiteAssociation

--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,8 @@
 {
-  "redirects": [
+  "rewrites": [
     {
-      "source": "apple-app-site-association", "destination": "/.well-known/apple-app-site-association",
-      "has": [
-        { "type": "header", "key": "Content-Type", "value": "application/json" }
-      ]
-    }
-  ],
-  "headers": [
-    {
-      "source": "/.well-known/apple-app-site-association",
-      "headers": [
-        { "key": "Content-Type", "value": "application/json" }
-      ]
+      "source": "/apple-app-site-association",
+      "destination": "/api/apple-site-association"
     }
   ]
 }
